--- a/src/classes/TriggerHandler.cls
+++ b/src/classes/TriggerHandler.cls
@@ -23,8 +23,7 @@
  * @see TriggerHandlerFactory
  * @see TriggerHandlerDispatcher
  */
-public interface TriggerHandler {
-
+global interface TriggerHandler {
     /**
      * Called before inserting SObjects.
      */
